<resources>
    <string name="app_name">Couple</string>
    <string name="title_days">Days</string>
    <string name="title_account">Account</string>
    <string name="title_square">Square</string>
    <string name="title_diary">Diary</string>
    <string name="title_my">My</string>

    //days
    <string name="days_card_profile_left_icon">profile icon left</string>
    <string name="days_card_profile_right_icon">profile icon right</string>
    <string name="days_card_together_days">We have been together %1$s days</string>
    <string name="days_card_together_start_date">since: 2022–5-1</string>
    <string name="days_memory_cell_icon">memory icon</string>
    <string name="days_memory_cell_description_passed">%1$s is been</string>
    <string name="days_memory_cell_description_coming">%1$s will happen in</string>
    <string name="days_memory_cell_start_date">Jan 12, 2023</string>
    <string name="days_memory_cell_days">%1$s days</string>
    <string name="days_memory_cell_edit_button">edit the memory dates</string>
    <string name="days_memory_cell_delete_button">delete this cell</string>

    //my
    <string name="my_profile_user_name">pp</string>
    <string name="my_profile_user_id">id:123456</string>
    <string name="my_profile_user_photo_button">user photo</string>
    <string name="profile_edit_my_info">My Information</string>
    <string name="profile_edit_wallet">Wallet</string>
    <string name="profile_edit_relationship">Relationship</string>
    <string name="profile_edit_customer_service">Customer Service</string>
    <string name="profile_edit_user_agreement">User Agreement</string>
    <string name="profile_edit_log_out">Log Out</string>
    <string name="profile_edit_my_id_prefix">id: </string>
    <string name="my_profile_name">Name</string>
    <string name="my_relationship_status">My Current status: single</string>
    <string name="my_relationship_partner_paired_text">Enter your partner\'s id</string>
    <string name="your_partner_id">Your Partner\'s id</string>
    <string name="pair_with_someone">Pair with Someone</string>
    <string name="pair_button">Invite</string>
    <string name="my_relationship_invite_code">Share Your Invitation Code</string>

    //login
    <string name="login_login_text">Login/Register</string>
    <string name="login_edit_email">Your Email</string>
    <string name="login_edit_password">Your Password</string>
    <string name="login_login_create_account_text">Login/Register account</string>
    <string name="forget_my_password">Forget My Password</string>
    <string name="login_password_hints">Please make sure you set password: \n-at least eight characters\n-has one upper character\n-has one lower character\n-has one special symbol</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="send_link">Send Link</string>
    <string name="reset_password_close_button">Reset password close button</string>
    <string name="login_page_image">login_page_image</string>
    <string name="enter_your_invite_code_to_pair">Enter Partner Invite Code</string>
    <string name="invite_code">Invite Code</string>
    <string name="enter">Enter</string>
    <string name="or">OR</string>
    <string name="my_relationship_bridge_image">my_relationship_bridge_image</string>
    <string name="days_card_heart_icon">days card heart icon</string>
    <string name="copy">copy</string>
    <string name="pair">Pair</string>
    <string name="add_new">Add new</string>
    <string name="add_event">Add Event</string>
    <string name="days_memory_edit_time">2023-01-01</string>
    <string name="save">save</string>
    <string name="unlink_my_relationship">unlink my relationship</string>
    <string name="unlink">unlink</string>
    <string name="click_to_end">Click To End</string>
</resources>