<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_days"
        android:icon="@drawable/ic_dashboard_tabs_annversiry"
        android:title="@string/title_days" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_dashboard_tabs_account"
        android:title="@string/title_account"
         />

    <item
        android:id="@+id/navigation_square"
        android:icon="@drawable/ic_dashboard_tabs_square"
        android:title="@string/title_square" />

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/ic_dashboard_tabs_diary"
        android:title="@string/title_diary"/>

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_dashboard_tabs_my"
        android:title="@string/title_my"/>

</menu>