<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_days">

    <fragment
        android:id="@+id/navigation_days"
        android:name="com.example.couple.ui.days.DaysFragment"
        android:label="@string/title_days"
        tools:layout="@layout/fragment_days" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.couple.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_square"
        android:name="com.example.couple.ui.square.SquareFragment"
        android:label="@string/title_square"
        tools:layout="@layout/fragment_square" />

    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.example.couple.ui.diary.DiaryFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_diary"/>

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.example.couple.ui.my.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my"/>

</navigation>