<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signin.LoginActivity">

    <data>
        <variable
            name="loginViewModel"
            type="com.example.couple.ui.signin.LoginActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <ImageView
        android:id="@+id/login_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/login_page_image"
        android:src="@drawable/ic_login_image"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_image"
        android:text="@string/login_login_text"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/login_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/login_edit_email"
        android:singleLine="true"
        android:textSize="20sp"
        android:backgroundTint="@color/grey_591"/>

    <EditText
        android:id="@+id/login_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:singleLine="true"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/login_edit_password"
        android:backgroundTint="@color/grey_591"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_edit_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/login_login_create_account_text"
        app:layout_constraintTop_toBottomOf="@id/login_edit_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/forget_password_btn"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:text="@string/forget_my_password"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/forget_password_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:lineSpacingMultiplier="2"
        android:textStyle="bold"
        android:layout_marginHorizontal="30dp"
        android:text="@string/login_password_hints"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>