<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="13dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@drawable/days_card_gradient_bg">

        <ImageView
            android:id="@+id/days_card_profile_icon_left"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/days_card_profile_left_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:srcCompat="@drawable/ic_days_card_profile" />

        <ImageView
            android:id="@+id/days_card_heart_icon"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:contentDescription="@string/days_card_heart_icon"
            android:paddingHorizontal="3dp"
            app:layout_constraintStart_toEndOf="@id/days_card_profile_icon_left"
            app:layout_constraintBottom_toBottomOf="@id/days_card_profile_icon_left"
            android:src="@drawable/ic_days_card_heart"/>

        <ImageView
            android:id="@+id/days_card_profile_icon_right"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/days_card_profile_right_icon"
            app:layout_constraintStart_toEndOf="@id/days_card_heart_icon"
            app:layout_constraintTop_toTopOf="@id/days_card_profile_icon_left"
            app:layout_constraintVertical_bias="0.095"
            app:srcCompat="@drawable/ic_days_card_profile" />

        <TextView
            android:id="@+id/days_card_days_together_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/days_card_together_days"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/days_card_profile_icon_left"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/days_card_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/days_card_together_start_date"
            app:layout_constraintTop_toBottomOf="@id/days_card_days_together_text"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>