<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/reset_password_close_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_close_black"
        android:contentDescription="@string/reset_password_close_button"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/reset_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:text="@string/reset_your_password"
        android:textSize="30sp"
        android:layout_marginTop="60dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/reset_password_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/login_edit_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="20sp"
        android:autofillHints="emailAddress"
        android:backgroundTint="@color/grey_591"
        app:layout_constraintTop_toBottomOf="@id/reset_password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/reset_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/reset_password_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:text="@string/send_link"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reset_password_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>