<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/my_relationship_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/my_relationship_photo_left"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/my_profile_user_photo_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/my_relationship_photo_bridge"
            android:background="@drawable/ic_my_profile_photo"
            android:layout_marginStart="20dp"/>

        <ImageView
            android:id="@+id/my_relationship_photo_bridge"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:contentDescription="@string/my_relationship_bridge_image"
            android:background="@drawable/ic_my_relationship_bridge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/my_relationship_photo_left" />

        <ImageView
            android:id="@+id/my_relationship_photo_right"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/my_profile_user_photo_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/my_relationship_photo_bridge"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/ic_my_profile_photo"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/my_relationship_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_relationship_status"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/my_relationship_photo_bridge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/my_relationship_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/my_relationship_pair_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_relationship_body_text"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/grey_591"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/my_relationship_pair_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/grey_591"
            app:layout_constraintTop_toBottomOf="@id/my_relationship_pair_text"
            android:text="@string/pair_with_someone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <include
            android:id="@+id/my_relationship_enter_invite_code_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            layout="@layout/include_my_relationship_pair_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_relationship_pair_desc_text"/>

        <TextView
            android:id="@+id/my_relationship_or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_relationship_enter_invite_code_card"
            android:text="@string/or"/>

        <include
            android:id="@+id/my_relationship_partner_id_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/include_my_relationship_pair_card"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_relationship_or_text"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>